--- a/index.html
+++ b/index.html
@@ -38,8 +38,59 @@
         </ul>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <img src="./img/googlelogo.png" alt="" class="img.main__logo" />
 
-    <footer class="footer"></footer>
+      <div class="main__search-bar">
+        <!-- 1-MAGNIFIER -->
+        <img
+          src="./img/magnifying_glass.jpg"
+          alt=""
+          class="main__search-bar--magnifier"
+        />
+        <!-- 2-INPUT -->
+        <input type="search" class="main__search-bar--input" />
+        <!-- 3- MICROPHONE -->
+        <img
+          src="./img/google_microphone.png"
+          alt=""
+          class="main__search-bar--mic"
+        />
+      </div>
+
+      <div class="main__buttons">
+        <button 
+        class="main__buttons--left">Google Search</button>
+
+        <button 
+        class="main__buttons--right">I'm Feeling Lucky</button>
+        
+      </div>
+
+      <div class="main__language"><p>Other Language you can use Google:
+        <a href="">English</a>
+      </p>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="footer__country">Turkey</div>
+
+      <div class="footer__bottom">
+        <ul class="footer__bottom--left">
+          <li><a href="">Adversitisng</a></li>
+          <li><a href="">Business</a></li>
+          <li><a href="">How Search Works</a></li>
+        </ul>
+
+        <ul class="footer__bottom--right">
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+          <li><a href="">Settings</a>  </li>
+        </ul>
+
+      </div>
+
+
+    </footer>
   </body>
 </html>
